# Interpreter

./: CMakeLists.txt  Database.h  DatalogProgram.cpp  DatalogProgram.h  Header.h  Interpreter  Interpreter.cpp  Interpreter.h  Parameter.h  Parser.cpp  Parser.h  Predicate.h  Relation.cpp  Relation.h  Rule.h  Scanner.cpp  Scanner.h  Scheme.h  Token.cpp  Token.h  Tuple.h  in.txt  main.cpp  output.txt
